allow turning on and off

--- a/popup.html
+++ b/popup.html
@@ -10,7 +10,7 @@
     </style>
   </head>
   <body>
-    <button id="active"></button>
+    <input id="activateCheckbox" type="checkbox">
     <script src="popup.js"></script>
   </body>
 </html>
