redirect only on reload button

--- a/popup.html
+++ b/popup.html
@@ -10,7 +10,7 @@
     </style>
   </head>
   <body>
-    <input id="activateCheckbox" type="checkbox">
+    <button id="refreshButton"></button>
     <script src="popup.js"></script>
   </body>
 </html>
