extract dependency tree

--- a/popup.html
+++ b/popup.html
@@ -3,7 +3,7 @@
   <head>
     <style>
       button {
-        height: 30px;
+        height: 60px;
         width: 30px;
         outline: none;
       }
@@ -11,6 +11,7 @@
   </head>
   <body>
     <button id="refreshButton"></button>
+    <button id="resultsButton"></button>
     <script src="popup.js"></script>
   </body>
 </html>
